# ACR-2017-18

3rdPartyTools/pthreads/: README.txt
Seminar_1/code/1_pthread_app/: main.cpp  pthread_app.sln  pthread_app.vcxproj  pthread_app.vcxproj.filters
Seminar_1/code/2_sum_seq/: 2_sum_seq.sln  2_sum_seq.vcxproj  2_sum_seq.vcxproj.filters
Seminar_1/code/3_sync_problem/: 3_sync_problem.sln  3_sync_problem.vcxproj  3_sync_problem.vcxproj.filters
Seminar_1/docs/: Izvjestaj1.docx  Multithreading - Pthread.pptx  NAR_vj1_v1.docx  Task1_Timings_and_Specs.xlsx
Seminar_2/: Brza priručna memorija-Cache1.pptx
Seminar_2/Example_1/src/: main.cpp
Seminar_2/Example_1_vC#/: Program.cs
Seminar_2/Example_2/: CMakeLists.txt
Seminar_2/Example_2/inc/Utility/: Clock.hpp
Seminar_2/Example_2/src/: main.cpp
Seminar_2/Example_3/src/: main.cpp
Seminar_2/Example_4/: CMakeLists.txt
Seminar_2/Example_4/src/: main.cpp
Seminar_2/Example_5/: CMakeLists.txt
Seminar_2/Example_5/inc/Utility/: Clock.hpp
Seminar_2/Example_5/src/: main.cpp
Seminar_2/Example_6/src/: main.cpp
Seminar_2/Example_7/src/: main.cpp
Seminar_2/VS_TestingGround/: VS_TestingGround.sln
Seminar_2/VS_TestingGround/VS_TestingGround/: VS_TestingGround.vcxproj  VS_TestingGround.vcxproj.filters
Seminar_2/_docs/: Izvjestaj2.docx  example_2.xlsx  example_3.xlsx  ~$vjestaj2.docx
Seminar_3/GaborFilter/: GaborFilter.sln  READ_ME.md
Seminar_3/GaborFilter/GaborFilter/: GaborFilter.vcxproj  GaborFilter.vcxproj.filters
Seminar_3/docs/: Gabor filter.pptx  Izvjestaj3_Biuk_Melvan.docx
(+28 files in other folders)
